--- a/aa/package.json
+++ b/aa/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.6",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.5",
@@ -18,6 +19,7 @@
     "expo": "~52.0.9",
     "expo-font": "^13.0.1",
     "expo-status-bar": "~2.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-gesture-handler": "^0.0.5",
@@ -28,7 +30,8 @@
     "react-native-safe-area-context": "^4.14.0",
     "react-native-svg": "^15.9.0",
     "react-native-web": "^0.19.13",
-    "react-native-webview": "^13.12.4"
+    "react-native-webview": "^13.12.4",
+    "react-native-wheely": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
