--- a/aa/package.json
+++ b/aa/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^7.0.5",
     "axios": "^1.7.7",
     "expo": "~52.0.9",
+    "expo-document-picker": "^13.0.1",
     "expo-font": "^13.0.1",
     "expo-status-bar": "~2.0.0",
     "lodash": "^4.17.21",
@@ -27,6 +28,7 @@
     "react-native-document-picker": "^9.3.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-svg": "^15.9.0",
     "react-native-web": "^0.19.13",
