--- a/aa/package.json
+++ b/aa/package.json
@@ -10,33 +10,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-picker/picker": "^2.9.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.6",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.5",
     "axios": "^1.7.7",
     "expo": "~52.0.9",
-    "expo-document-picker": "^13.0.1",
-    "expo-font": "^13.0.1",
+    "expo-dev-client": "~5.0.4",
+    "expo-document-picker": "~13.0.1",
+    "expo-font": "~13.0.1",
     "expo-status-bar": "~2.0.0",
     "lodash": "^4.17.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-gesture-handler": "^0.0.5",
-    "react-native": "^0.76.2",
+    "react-native": "0.76.3",
     "react-native-document-picker": "^9.3.1",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-picker-select": "^9.3.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-svg": "^15.9.0",
-    "react-native-web": "^0.19.13",
-    "react-native-webview": "^13.12.4",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.2",
     "react-native-wheely": "^0.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
